--- a/Resources/Prototypes/_CP14/ModularCraft/slots.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/slots.yml
@@ -29,3 +29,7 @@
 - type: modularSlot
   id: RingMagicCrystal1
   name: cp14-modular-slot-magical-crystal
+
+- type: modularSlot
+  id: MagicArtifact1
+  name: cp14-modular-slot-magic-artifact
