--- a/Resources/Prototypes/_CP14/ModularCraft/slots.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/slots.yml
@@ -33,3 +33,7 @@
 - type: modularSlot
   id: MagicArtifact1
   name: cp14-modular-slot-magic-artifact
+
+- type: modularSlot
+  id: StaffHolderMagicCrystal1
+  name: cp14-modular-slot-magic-crystal
