--- a/Resources/Prototypes/_CP14/Entities/Structures/dungeon_entrance.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/dungeon_entrance.yml
@@ -1,6 +1,6 @@
 - type: entity
   id: CP14DungeonEntrance
-  name: dungeon entrance
+  name: stairway down
   categories: [ HideSpawnMenu ]
   description: The dark depths of the underworld are calling you.
   placement:
@@ -17,13 +17,13 @@
     drawdepth: FloorTiles
     layers:
     - state: ladder
-    - state: down
+    #- state: down
   - type: Fixtures
     fixtures:
       portalFixture:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.25,-0.48,0.25,0.48"
+          bounds: "-0.48,-0.48,0.48,-0.05"
         mask:
         - FullTileMask
         layer:
@@ -36,7 +36,7 @@
 - type: entity
   parent: CP14DungeonEntrance
   id: CP14DungeonExit
-  name: dungeon exit
+  name: stairway up
   categories: [ HideSpawnMenu ]
   description: A way out of the dark underworld into the overworld.
   components:
@@ -46,7 +46,18 @@
     drawdepth: FloorTiles
     layers:
     - state: ladder
-    - state: top
+    #- state: top
+  - type: Fixtures
+    fixtures:
+      portalFixture:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.5,0.5,0.5,0.4"
+        mask:
+        - FullTileMask
+        layer:
+        - WallLayer
+        hard: false
   - type: PointLight
     color: White
     radius: 3
