--- a/Resources/Prototypes/_CP14/Entities/Structures/dungeon_entrance.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/dungeon_entrance.yml
@@ -41,9 +41,8 @@
   description: A way out of the dark underworld into the overworld.
   components:
   - type: Sprite
-    noRot: true
-    sprite: /Textures/_CP14/Structures/Dungeon/ladders.rsi
-    drawdepth: FloorTiles
+    sprite: /Textures/_CP14/Structures/Dungeon/ladders_up.rsi
+    drawdepth: Mobs
     layers:
     - state: ladder
     #- state: top
@@ -52,7 +51,7 @@
       portalFixture:
         shape:
           !type:PhysShapeAabb
-          bounds: "-0.5,0.5,0.5,0.4"
+          bounds: "-0.48,0.48,0.48,0.05"
         mask:
         - FullTileMask
         layer:
