--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island_ring.yml
@@ -9,6 +9,7 @@
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
   - type: CP14MapFloorOccluder
+  - type: CP14MapDamage
   - type: Parallax
     parallax: CP14Ocean
   - type: CP14CloudShadows
