--- a/Resources/Prototypes/_CP14/Entities/Actions/zLevels.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/zLevels.yml
@@ -5,7 +5,9 @@
   components:
   - type: InstantAction
     checkCanInteract: false
-    icon: _CP14/Actions/zLevel.rsi/up.png
+    icon: 
+      sprite: _CP14/Actions/zLevel.rsi
+      state: up
     event: !type:CP14ZLevelActionUp
 
 - type: entity
@@ -15,5 +17,7 @@
   components:
   - type: InstantAction
     checkCanInteract: false
-    icon: _CP14/Actions/zLevel.rsi/down.png
+    icon: 
+      sprite: _CP14/Actions/zLevel.rsi
+      state: down
     event: !type:CP14ZLevelActionDown
