--- a/Resources/Prototypes/_CP14/Entities/Structures/Roof/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Roof/base.yml
@@ -20,7 +20,11 @@
   - type: BlockWeather
   - type: CP14Roof
   - type: Sprite
-    snapCardinals: true
     drawdepth: Effects
     sprite: _CP14/Structures/Roof/test.rsi
-    state: base
+  - type: Icon
+    sprite: _CP14/Structures/Roof/test.rsi
+    state: full
+  - type: IconSmooth
+    key: CP14roof
+    base: wood
