--- a/Resources/Prototypes/Tiles/tile_migrations.yml
+++ b/Resources/Prototypes/Tiles/tile_migrations.yml
@@ -6,6 +6,10 @@
 - type: tileAlias
   id: CP14FloorWoodPlanksBig
   target: CP14FloorOakWoodPlanksBig
+
+- type: tileAlias
+  id: CP14FloorStonebricksWeather
+  target: CP14FloorStonebricks
 ### /CP14 UPD
 
 - type: tileAlias
