--- a/Resources/Prototypes/_CP14/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Walls/walls.yml
@@ -37,6 +37,9 @@
   - type: Construction
     graph: CP14WallStonebrick
     node: WallStonebrick
+  - type: Damageable
+    damageContainer: StructuralInorganic
+    damageModifierSet: Rock
   - type: Destructible
     thresholds:
     - trigger:
@@ -48,6 +51,11 @@
           CP14WallStonebrickCrushedMedium:
             min: 1
             max: 1
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/break_stone.ogg
+          params:
+            volume: -6
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
   - type: CP14WallpaperHolder
